Added HTML attributes

--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
     <h1>Blade Runner</h1>
 
     <div>
-        <a href="/scifi">Sci-fi</a>
-        <a href="/action">Action</a>
+        <a class="tag" href="/scifi">Sci-fi</a>
+        <a class="tag" href="/action">Action</a>
     </div>
 
-    <h2>Average Rating: 8.1</h2>
+    <h2 class="score">Average Rating: 8.1</h2>
 
-    <ul>
+    <ul id="toc">
         <li><a href="#summary">Summary</a></li>
         <li><a href="#cast">Cast</a></li>
         <li><a href="#reviews">Reviews</a></li>
     </ul>
 
-    <h2>Summary</h2>
+    <h2 id="summary">Summary</h2>
 
     <p>
         <b>Blade Runner</b> is a 1982 <a href="https://en.wikipedia.org/wiki/Science_fiction_film">science fiction
@@ -67,7 +67,7 @@
 
     <h2>Cast</h2>
 
-    <ul>
+    <ul id="cast">
         <li>Harrison Ford as <span>Rick Deckard</span></li>
         <li>Rutger Hauer as <span>Roy Batty</span></li>
         <li>Sean Young as <span>Rachael</span></li>
@@ -77,14 +77,14 @@
 
     <hr />
 
-    <h2>User Reviews</h2>
+    <h2 id="reviews">User Reviews</h2>
 
     <div>
-        <span>Featured Review</span>
+        <span id="featured">Featured Review</span>
 
         <h3>All those moments will be lost in time, like tears in rain...</h3>
 
-        <h4>10/10</h4>
+        <h4 class="score">10/10</h4>
 
         <p>
             Blade Runner describes a future in which, through genetics, artificial humans are manufactured and called
@@ -134,7 +134,7 @@
     <div>
         <h3>A warning to the curious.</h3>
 
-        <h4>9/10</h4>
+        <h4 class="score">9/10</h4>
 
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit sint temporibus ducimus porro
@@ -165,7 +165,7 @@
     <div>
         <h3>Best movie ever!</h3>
 
-        <h4>10/10</h4>
+        <h4 class="score">10/10</h4>
 
         <p>
             Just my personal opinion. Everything is perfect about this movie. I saw the movie the first time when I was
