Added basic styles to CSS and fixed the Cast bug

--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 <html>
 
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+        rel="stylesheet">
+
     <link rel="stylesheet" href="app.css">
-    
+
     <title>Blade Runner Wikiesque</title>
 </head>
 
@@ -67,9 +73,9 @@
         culpa tenetur, accusamus esse natus laboriosam, suscipit maiores, quae eligendi doloremque. Vel, vitae natus.
     </p>
 
-    <h2>Cast</h2>
+    <h2 id="cast">Cast</h2>
 
-    <ul id="cast">
+    <ul>
         <li>Harrison Ford as <span>Rick Deckard</span></li>
         <li>Rutger Hauer as <span>Roy Batty</span></li>
         <li>Sean Young as <span>Rachael</span></li>
@@ -209,7 +215,7 @@
     <div>
         <h2>Leave Your Own Review</h2>
 
-        <input type="text" placeholder="username">
+        <input type="text" placeholder="username" disabled>
 
         <input type="number" placeholder="rating">
 
